app/webroot/css/900_style.css
/*-------------------------------------------------------------------------

	Typography Definitions

-------------------------------------------------------------------------*/

/*	Basic Styles
-------------------------------------------------------------------------*/
html {
	height: 100%;
	min-height: 700px;
	background: transparent url(../img/bkg.jpg) repeat 0 0;
	outline: none;
	font-family: 'Gudea', sans-serif;
}
html.full-background {
	background-repeat: no-repeat;
	background-position: center center;
	background-attachment: fixed;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
}


/* Headings
-------------------------------------------------------------------------*/
h1,
h2,
h3,
h4,
h5,
h6 {
	/* Add heading stylings */
}
h1 {
	/* Add heading stylings */
}
h2 {
	/* Add heading stylings */
}
h3 {
	/* Add heading stylings */
}
h4 {
	/* Add heading stylings */
}
h5 {
	/* Add heading stylings */
}
h6 {
	/* Add heading stylings */
}

/* Text elements
-------------------------------------------------------------------------*/

/* Link elements
-------------------------------------------------------------------------*/

/* Lists
-------------------------------------------------------------------------*/












/*-------------------------------------------------------------------------

	Header Definitions

-------------------------------------------------------------------------*/
#logo {
	display: block;
	margin: 0 0 45px;
	padding: 20px 0 0;
	text-align: center;
}










/*-------------------------------------------------------------------------

	Footer Definitions

-------------------------------------------------------------------------*/
#global-footer {
	position: absolute;
	bottom: 10px;
	left: 0;
	width:100%;
}
#global-footer p {
	text-align:center;
	color:#ffffff;
	text-shadow:1px 1px 3px #000;
	font-size:12px
}
#global-footer a {
	text-decoration:none;
	color:#fff;
}
#global-footer a:hover {
	text-decoration:underline;
}











/*-------------------------------------------------------------------------

	Layout Definitions

-------------------------------------------------------------------------*/
.container {
	width: 960px;
	margin: 0 auto;
	background: #f1efd7;
}
.container.slim {
	width: 360px;
	padding: 0 20px 25px;
}













/*-------------------------------------------------------------------------

	Inputs Definitions

-------------------------------------------------------------------------*/
input {
	display: inline-block;
	width: 240px;
	padding: 6px 0 0;
	margin: 0 15px 0 0;
	background: transparent;
	border: 0;
	border-top: 8px #8a877b solid;
	outline: none;
}
input:focus {
	border-top: 8px #d81670 solid;
}
::-webkit-input-placeholder  {
	color: #6d6e71;
	font-family: 'Gudea', sans-serif;
}
input:-moz-placeholder {
	color: #6d6e71;
	font-family: 'Gudea', sans-serif;
}
input.form-error {
	border-color:red;
}













/*-------------------------------------------------------------------------

	Create Haiku Form Definitions

-------------------------------------------------------------------------*/
#createHaiku {
	height: 350px;
}
#createHaiku p {
	margin: 0 0 30px;
}
.word-count {
	display: inline-block;
	width: 30px;
	padding: 6px 0 0;
	border-top: 8px #a7a588 solid;
	color: #a7a588;
	text-align: center;
}
.max-count {
	border-top-color: red;
}
.button-container {
	height: 45px;
}
.button {
	position: relative;
	width: 162px;
	right: -40px;
	top: 0;
	float: right;
	padding: 8px 10px;
	border: 0;
	background: #d81670;
	color: #fff;
	font-family: 'Gudea', sans-serif;
	text-align: left;
	text-decoration: none;
}
.long-button {
	width: 182px;
}
.button::after {
	content: ' ';
	position: absolute;
	width: 0;
	height: 0;
	right: 0;
	top: 100%;
	border-width: 5px 10px;
	border-style: solid;
	border-color: #3f0544 transparent transparent #3f0544;
}
.button:hover {
	background: #bc045a;
	cursor: pointer;
}
.button.purple {
	background-color: #a74a9b;
}
.button.purple:hover {
	background-color: #96368a;
}
.arrow {
	display: inline-block;
	position: relative;
	float: right;
	top: 6px;
	right: 13px;
	width: 0;
	height: 0;
	border-top: 4px solid transparent;
	border-bottom: 4px solid transparent;
	border-left: 12px solid #fff;
}
#createHaiku .submit-container {
	margin-bottom: 10px;
}
#createHaiku .syllable-warning {
	margin-top: 20px;
	color: #6d6e71;
	font-family: 'Gudea', sans-serif;
}
.home-logo {
	width: 180px;
}














/*-------------------------------------------------------------------------

	Details Page Definitions

-------------------------------------------------------------------------*/
#detailsContainer {
	background: rgba(170, 169, 141, 0.85);
}
#detailsContainer #logo img {
	width: 130px;
}
#detailsContainer #logo {
	margin-bottom: 68px;
}
.haiku-detail {
	margin: 0 0 80px;
	font-size: 24px;
	color: #fff;
}
.social-container {
	margin-top: 25px;
}
.inner-social-container {
	display: inline-block;
}
.twitter-container {
	width: 80px;
}
.google-plus-container {
	width: 42px;
	position: relative;
	top: 2px;
}
.facebook-container {
	position: relative;
	top: -4px;
	width: 132px;
}
.stumbleupon-container {
	position: relative;
	top: -1px;
	width: 69px;
}
#FlagFlagForm {
	width: 70px;
}
.flag-submit {
	border: 0;
	width: 70px;
	display: inline;
}

